--- a/src/AndroidManifest.xml
+++ b/src/AndroidManifest.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
-      package="com.woelfware.blumote" android:versionName="0.12.3.31">
+      package="com.woelfware.blumote" android:versionName="0.12.55"
+      android:installLocation="preferExternal">
+    
+    <uses-sdk android:targetSdkVersion="10" android:minSdkVersion="5"></uses-sdk>
+    	  
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
+	<uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	
     <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/bluemote">
         <activity android:name="BluMote"
                   android:label="@string/app_name"
@@ -20,12 +30,5 @@
 		<activity android:theme="@android:style/Theme.Dialog" android:label="New Activity" android:name="CreateActivity" android:screenOrientation="portrait"></activity>
 		<activity android:name="ActivityInitEdit" android:screenOrientation="portrait"></activity>
 		<activity android:name=".EnterName" android:theme="@android:style/Theme.Dialog" android:label="Rename Misc Button"></activity>
-	</application>
-
-	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
-	<uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-	<uses-sdk android:targetSdkVersion="10" android:minSdkVersion="5"></uses-sdk>
+	</application>	
 </manifest> 
