--- a/src/AndroidManifest.xml
+++ b/src/AndroidManifest.xml
@@ -4,7 +4,7 @@
       package="com.woelfware.blumote" android:versionName="0.12.522"
       android:installLocation="preferExternal">
     
-    <uses-sdk android:targetSdkVersion="10" android:minSdkVersion="5"></uses-sdk>
+    <uses-sdk android:targetSdkVersion="8" android:minSdkVersion="8"></uses-sdk>
     	  
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
 	<uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
@@ -12,7 +12,9 @@
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	
-    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/bluemote">
+    <application android:label="@string/app_name" android:icon="@drawable/bluemote" android:backupAgent=".MyBackupAgentHelper">
+		<meta-data android:name="com.google.android.backup.api_key"	android:value="AEdPqrEAAAAIysP9ZYx7oeCaJyRBh-DjWkeBNhMVBgadedpcGQ" />
+		
         <activity android:name="BluMote"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
@@ -21,7 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 		<activity android:name="MyPreferences" android:screenOrientation="portrait"/>
 		<activity android:name="PodListActivity" android:screenOrientation="portrait"/>    
 		<activity android:name="ManageDevices" android:screenOrientation="portrait"/>
@@ -29,6 +30,6 @@
 		<activity android:theme="@android:style/Theme.Dialog" android:label="New Device" android:name="EnterDevice" android:screenOrientation="portrait"></activity>
 		<activity android:theme="@android:style/Theme.Dialog" android:label="New Activity" android:name="CreateActivity" android:screenOrientation="portrait"></activity>
 		<activity android:name="ActivityInitEdit" android:screenOrientation="portrait"></activity>
-		<activity android:name=".EnterName" android:theme="@android:style/Theme.Dialog" android:label="Rename Misc Button"></activity>
+		<activity android:name=".EnterName" android:theme="@android:style/Theme.Dialog" android:label="Rename Misc Button"></activity>				
 	</application>	
 </manifest> 
