--- a/src/AndroidManifest.xml
+++ b/src/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
-      package="com.woelfware.blumote" android:versionName="0.12.522"
+      package="com.woelfware.blumote" android:versionName="0.11.6.13"
       android:installLocation="preferExternal">
     
     <uses-sdk android:targetSdkVersion="8" android:minSdkVersion="8"></uses-sdk>
@@ -10,7 +10,8 @@
 	<uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>	
+	<uses-permission android:name="android.permission.VIBRATE"></uses-permission>
 	
     <application android:label="@string/app_name" android:icon="@drawable/bluemote" android:backupAgent=".MyBackupAgentHelper">
 		<meta-data android:name="com.google.android.backup.api_key"	android:value="AEdPqrEAAAAIysP9ZYx7oeCaJyRBh-DjWkeBNhMVBgadedpcGQ" />
